[metadata]
name = pydigimon
version = 0.0.1
author = Guiomar Valderrama
description = Client to get Digimon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdvalderrama/pydigimon
project_urls =
    Bug Tracker = https://github.com/gdvalderrama/pydigimon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = digimon
packages = find:
install_requires =
    requests
python_requires = >=3.6

[options.packages.find]
where = digimon
